--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
               个人中心
             </a>
             <dl class="layui-nav-child">
-              <dd><a href="">基本资料</a></dd>
-              <dd><a href="">更换头像</a></dd>
-              <dd><a href="">重置密码</a></dd>
+              <dd><a href="/user/userInfo.html" target="fm">基本资料</a></dd>
+              <dd><a href="/user/user_avatar.html" target="fm">更换头像</a></dd>
+              <dd><a href="/user/user_pwd.html" target="fm">重置密码</a></dd>
             </dl>
           </li>
           <li class="layui-nav-item">
@@ -60,17 +60,17 @@
               >
               <dl class="layui-nav-child">
                 <dd>
-                  <a href="javascript:;"
+                  <a href="/article/art_cate.html" target="fm"
                     ><i class="layui-icon layui-icon-app"></i>文章类别</a
                   >
                 </dd>
                 <dd>
-                  <a href="javascript:;"
+                  <a href="/article/artList.html " target="fm"
                     ><i class="layui-icon layui-icon-app"></i>文章列表</a
                   >
                 </dd>
                 <dd>
-                  <a href="javascript:;"
+                  <a href="/article/artPub.html" target="fm"
                     ><i class="layui-icon layui-icon-app"></i>发表文章</a
                   >
                 </dd>
@@ -82,7 +82,7 @@
               >
               <dl class="layui-nav-child">
                 <dd>
-                  <a href="javascript:;" target="fm"
+                  <a href="/user/userInfo.html" target="fm"
                     ><i class="layui-icon layui-icon-app"></i>基本资料</a
                   >
                 </dd>
